src/app/main/content/board/single-task/single-task.component.scss
@import "./../../../../../styles.scss";

.task-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: rgba(0, 0, 0, 0.5);
  @include dFlex();
  flex-direction: column;
  z-index: 1000;

  h1 {
    @include font($ff: "Inter", $fs: clamp(36px, 7vw, 61px), $fw: 700);
    margin-bottom: 16px;
  }

  p {
    @include font($ff: "Inter", $fs: clamp(14px, 3vw, 20px), $fw: 400);
  }

  .task-overlay-content {
    position: relative;
    background: $white;
    padding: 32px;
    border-radius: 24px;
    width: 500px;
    height: 800px;

    @media (max-width: 580px) {
      width: 85%;
      height: 70%;
      padding: 24px;
    }

    @media (max-width: 480px) {
      height: 50%;
      padding: 16px;
    }

    .header {
      @include dFlex($jc: space-between);
      margin-bottom: 24px;

      @media (max-width: 580px) {
        margin-bottom: 12px;
      }

      .category {
        padding: 3px 20px;
        border-radius: 6px;
        background-color: $blue_deep;
        color: $white;
        @include font($ff: "Inter", $fs: clamp(16px, 3vw, 23px), $fw: 400);
      }

      .close-btn {
        background: none;
        border: none;
        cursor: pointer;
        border-radius: 50%;

        &:hover {
          background: $mid_gray;
        }
      }
    }

    .label {
      color: $black;
    }

    .info,
    .assigned-to,
    .subtasks {
      margin-top: 16px;
    }

    .subtask,
    .assignee {
      margin-left: 16px;
    }

    .assignees {
      display: flex;
      flex-direction: column;

      .assignee {
        display: flex;
        align-items: center;
        gap: 10px;
        margin-top: 16px;

        .profile-pic {
          @include dFlex();
          width: 24px;
          height: 24px;
          border-radius: 50%;
          color: $white;
        }

        .assignee-name {
          @include font($ff: "Inter", $fs: clamp(14px, 3vw, 20px), $fw: 400);
        }
      }
    }

    .subtask {
      margin-top: 8px;
      border-radius: 16px;
      padding: 0px 8px;
      line-height: 1.8;

      img {
        position: relative;
        top: 6px;
      }

      &:hover {
        background-color: $mid_gray;
      }
    }

    .subtask-text {
      margin-left: 10px;
      @include font($ff: "Inter", $fs: clamp(12px, 3vw, 16px), $fw: 400);
    }

    .actions-buttons {
      @include dFlex($jc: flex-end);
      position: absolute;
      bottom: 32px;
      right: 32px;

      button {
        color: $black;
        border: none;
        padding: 5px 10px;
        cursor: pointer;
        background: none;
        @include font($ff: "Inter", $fs: clamp(14px, 3vw, 20px), $fw: 400);

        &:hover {
          color: $light_blue;

          img {
            filter: invert(56%) sepia(34%) saturate(507%) hue-rotate(165deg)
              brightness(98%) contrast(95%);
          }
        }
      }

      .divider {
        width: 1px;
        height: 26px;
        background-color: $mid_gray;
      }

      img {
        position: relative;
        top: 4px;
      }
    }
  }
}

.example-box {
  @include dFlex($ai: flex-start, $jc: center, $g: 16px);
  flex-direction: column;
  width: 100%;
  min-height: 160px;
  max-height: 256px;
  padding: 16px;

  // border-bottom: solid 1px #ccc;
  border-radius: 10px;
  color: rgba(0, 0, 0, 0.87);
  // display: flex;
  // flex-direction: row;
  // align-items: center;
  // justify-content: space-between;
  box-sizing: border-box;
  cursor: move;
  background: white;
  font-size: 14px;
  &:hover {
    cursor: pointer;
  }
}

.task_card_category {
  @include font($fs: 16px, $fw: 400);
  height: 27px;
  min-height: 27px;
  width: 128px;
  border-radius: 8px;
  background-color: $blue_deep; // dynamic color change by category needed!
  text-align: center;
  align-content: center;
  color: $white;
}

.task_card_main {
  max-height: 84px;
  /* 3 dots appear when content overflows div size */
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.task_card_substasks {
  @include font($fs: 12px, $fw: 400);
  @include dFlex($ai: center, $jc: space-between);
  width: 100%;
  height: 16px;
}

.subtasks_progress {
  max-width: 128px;
  width: 65%;
  height: 16px;
}

.progress_outer {
  width: 100%;
  height: 16px;
}

.progress_inner {
  width: 50%; /* needs to be changed dynamically depending on team member count */
  height: 8px;
  border-radius: 4px;
  background-color: $blue_lavender;
}

.task_card_team {
  @include dFlex($ai: center, $jc: space-between);
  height: 32px;
  width: 100%;
}

.team_left {
  > .profile_badge {
    @include dFlex();
    width: 42px;
    height: 42px;
    border: 1px solid;
    border-color: $white;
    border-radius: 50%;
    @include font($fs: 12px, $fw: 400);
    color: $black;
    min-width: 42px;
  }
  // @include dFlex($ai: center, $jc: space-between);
  // > .initials_icon1 {
  //   @include font($fs: 12px, $fw: 400);
  //   height: 32px;
  //   width: 32px;
  //   border-radius: 50%;
  //   border: 2px solid $white;
  //   background-color: $purple;
  //   color: $white;
  //   text-align: center;
  //   align-content: center;
  // }
  // > .initials_icon2 {
  //   @include font($fs: 12px, $fw: 400);
  //   height: 32px;
  //   width: 32px;
  //   border-radius: 50%;
  //   border: 2px solid $white;
  //   background-color: $pink_soft;
  //   color: $white;
  //   text-align: center;
  //   align-content: center;
  //   margin-left: -8px;
  // }
  // > .initials_icon3 {
  //   @include font($fs: 12px, $fw: 400);
  //   height: 32px;
  //   width: 32px;
  //   border-radius: 50%;
  //   border: 2px solid $white;
  //   background-color: $yellow_gold;
  //   color: $white;
  //   text-align: center;
  //   align-content: center;
  //   margin-left: -8px;
  // }
}

.cdk-drag-preview {
  box-sizing: border-box;
  border-radius: 4px;
  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.cdk-drag-placeholder {
  opacity: 0;
}

.cdk-drag-animating {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.example-box:last-child {
  border: none;
}

.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

